# hanoi-crossing

./: .editorconfig  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: DEVLOG.md
docs/design-decisions/: 0001-win-condition.md  0002-terminal-semantics.md
examples/: spec_n1.moves  win_via_opponent.moves
src/hanoi/: __init__.py
src/hanoi/cli/: __init__.py  app.py  render.py
src/hanoi/engine/: __init__.py  actions.py  observation.py  rules.py  state.py
src/hanoi/io/: __init__.py  dsl.py
src/hanoi/players/: __init__.py  random_player.py
tests/: test_smoke.py
tests/cli/: test_cli.py
tests/engine/: test_actions.py  test_observation.py  test_properties.py  test_rules.py  test_state.py
tests/io/: test_dsl.py
tests/players/: test_random_player.py
