[project]
name = "hanoi-crossing"
version = "0.1.0"
description = "A turn-based, partially-observable Tower of Hanoi variant with a pure, reusable game engine."
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
dependencies = [
    "pydantic>=2.6",
    "typer>=0.12",
    "rich>=13.7",
]

[project.scripts]
hanoi = "hanoi.cli:app"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "hypothesis>=6.100",
    "ruff>=0.5",
    "pre-commit>=3.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hanoi"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
# E/F pyflakes+pycodestyle, I import-sort (replaces isort), UP pyupgrade,
# B bugbear, SIM simplify, RUF ruff-specific.
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.ruff.lint.isort]
known-first-party = ["hanoi"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=hanoi --cov-report=term-missing --cov-fail-under=80"

[tool.coverage.run]
source = ["hanoi"]
branch = true
